--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             let operand1Input = document.getElementById("operand1");
             let operand2Input = document.getElementById("operand2");
             let sum = Number(operand1Input.value) + Number(operand2Input.value);
-            document.getElementById("sum").innertext = sum;
+            document.getElementById("sum").innerHTML = sum;
         }
 
 
