--- a/index.html
+++ b/index.html
@@ -25,10 +25,16 @@
 
     <script>
 
-        function add() {
+        async function add() {
             let operand1Input = document.getElementById("operand1");
             let operand2Input = document.getElementById("operand2");
-            let sum = Number(operand1Input.value) + Number(operand2Input.value);
+
+            let n = operand1Input.value;
+            let m = operand2Input.value;
+
+            const response = await fetch("http://localhost:3000/add/" + n + "/" + m);  // fetch is async
+            const sum = await response.json();  // json() is also async
+
             document.getElementById("sum").innerHTML = sum;
         }
 
