--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             let n = operand1Input.value;
             let m = operand2Input.value;
 
-            const response = await fetch("http://arithmetic-sercvice-gtubbs.onrender.com/add/" + n + "/" + m);  // fetch is async
+            const response = await fetch("http://arithmetic-service-gtubbs.onrender.com/add/" + n + "/" + m);  // fetch is async
             const sum = await response.json();  // json() is also async
 
             document.getElementById("sum").innerHTML = sum;
@@ -80,10 +80,10 @@
             let n = operand1Input.value;
             let m = operand2Input.value;
 
-            const response = await fetch("http://arithmetic-sercvice-gtubbs.onrender.com/subtract/" + n + "/" + m);  // fetch is async
+            const response = await fetch("http://arithmetic-service-gtubbs.onrender.com/subtract/" + n + "/" + m);  // fetch is async
             const sub = await response.json();  // json() is also async
 
-            document.getElementById("sub").innerHTML = sum;
+            document.getElementById("sub").innerHTML = sub;
         }
 
         async function multiply() {
@@ -93,10 +93,10 @@
             let n = operand1Input.value;
             let m = operand2Input.value;
 
-            const response = await fetch("http://arithmetic-sercvice-gtubbs.onrender.com/multiply/" + n + "/" + m);  // fetch is async
+            const response = await fetch("http://arithmetic-service-gtubbs.onrender.com/multiply/" + n + "/" + m);  // fetch is async
             const prod = await response.json();  // json() is also async
 
-            document.getElementById("prod").innerHTML = sum;
+            document.getElementById("prod").innerHTML = prod;
         }
 
         async function divide() {
@@ -106,10 +106,10 @@
             let n = operand1Input.value;
             let m = operand2Input.value;
 
-            const response = await fetch("http://arithmetic-sercvice-gtubbs.onrender.com/divide/" + n + "/" + m);  // fetch is async
+            const response = await fetch("http://arithmetic-service-gtubbs.onrender.com/divide/" + n + "/" + m);  // fetch is async
             const quo = await response.json();  // json() is also async
 
-            document.getElementById("quo").innerHTML = sum;
+            document.getElementById("quo").innerHTML = quo;
         }
 
 
