--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             let n = operand1Input.value;
             let m = operand2Input.value;
 
-            const response = await fetch("http://arithmetic-service-gtubbs.onrender.com//add/" + n + "/" + m);  // fetch is async
+            const response = await fetch("https://arithmetic-service-gtubbs.onrender.com/add/" + n + "/" + m);  // fetch is async
             const sum = await response.json();  // json() is also async
 
             document.getElementById("sum").innerHTML = sum;
@@ -80,7 +80,7 @@
             let n = operand1Input.value;
             let m = operand2Input.value;
 
-            const response = await fetch("http://arithmetic-service-gtubbs.onrender.com//subtract/" + n + "/" + m);  // fetch is async
+            const response = await fetch("http://arithmetic-service-gtubbs.onrender.com/subtract/" + n + "/" + m);  // fetch is async
             const sub = await response.json();  // json() is also async
 
             document.getElementById("sub").innerHTML = sub;
@@ -93,7 +93,7 @@
             let n = operand1Input.value;
             let m = operand2Input.value;
 
-            const response = await fetch("http://arithmetic-service-gtubbs.onrender.com//multiply/" + n + "/" + m);  // fetch is async
+            const response = await fetch("http://arithmetic-service-gtubbs.onrender.com/multiply/" + n + "/" + m);  // fetch is async
             const prod = await response.json();  // json() is also async
 
             document.getElementById("prod").innerHTML = prod;
@@ -106,7 +106,7 @@
             let n = operand1Input.value;
             let m = operand2Input.value;
 
-            const response = await fetch("http://arithmetic-service-gtubbs.onrender.com//divide/" + n + "/" + m);  // fetch is async
+            const response = await fetch("http://arithmetic-service-gtubbs.onrender.com/divide/" + n + "/" + m);  // fetch is async
             const quo = await response.json();  // json() is also async
 
             document.getElementById("quo").innerHTML = quo;
