--- a/index.html
+++ b/index.html
@@ -4,119 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .column {
+           float: left;
+           width: 50%;
+           padding: 10px;
+           box-sizing: border-box;
+          
+        }
+        .row::after {
+           content: "";
+           clear: both;
+           display: table;
+        }
+     </style>
 </head>
-
-
 <body>
-    <h1>Arithmetic</h1>
-    <section>
-
-         <input id="operand1"  type="text">
-         <label> + </label>
-         <input id="operand2"  type="text">
-         <button onclick="add()"> = </button>
-         <label id="sum"></label>
-
-
-
-    </section>
-
-    <section>
-
-        <input id="operand1"  type="text">
-        <label> + </label>
-        <input id="operand2"  type="text">
-        <button onclick="add()"> = </button>
-        <label id="sub"></label>
-
-
-
-   </section>
-
-   <section>
-
-    <input id="operand1"  type="text">
-    <label> + </label>
-    <input id="operand2"  type="text">
-    <button onclick="add()"> = </button>
-    <label id="prod"></label>
-
-
-
-</section>
-<section>
-
-    <input id="operand1"  type="text">
-    <label> + </label>
-    <input id="operand2"  type="text">
-    <button onclick="add()"> = </button>
-    <label id="quo"></label>
-
-
-
-</section>
-
-
-
-    <script>
-
-        async function add() {
-            let operand1Input = document.getElementById("operand1");
-            let operand2Input = document.getElementById("operand2");
-
-            let n = operand1Input.value;
-            let m = operand2Input.value;
-
-            const response = await fetch("http://arithmetic-sercvice-gtubbs14.onrender.com/add/" + n + "/" + m);  // fetch is async
-            const sum = await response.json();  // json() is also async
-
-            document.getElementById("sum").innerHTML = sum;
-        }
-
-        async function subtract() {
-            let operand1Input = document.getElementById("operand1");
-            let operand2Input = document.getElementById("operand2");
-
-            let n = operand1Input.value;
-            let m = operand2Input.value;
-
-            const response = await fetch("http://arithmetic-sercvice-gtubbs14.onrender.com/subtract/" + n + "/" + m);  // fetch is async
-            const sub = await response.json();  // json() is also async
-
-            document.getElementById("sub").innerHTML = sum;
-        }
-
-        async function multiply() {
-            let operand1Input = document.getElementById("operand1");
-            let operand2Input = document.getElementById("operand2");
-
-            let n = operand1Input.value;
-            let m = operand2Input.value;
-
-            const response = await fetch("http://arithmetic-sercvice-gtubbs14.onrender.com/multiply/" + n + "/" + m);  // fetch is async
-            const prod = await response.json();  // json() is also async
-
-            document.getElementById("prod").innerHTML = sum;
-        }
-
-        async function divide() {
-            let operand1Input = document.getElementById("operand1");
-            let operand2Input = document.getElementById("operand2");
-
-            let n = operand1Input.value;
-            let m = operand2Input.value;
-
-            const response = await fetch("http://arithmetic-sercvice-gtubbs14.onrender.com/divide/" + n + "/" + m);  // fetch is async
-            const quo = await response.json();  // json() is also async
-
-            document.getElementById("quo").innerHTML = sum;
-        }
-
-
-
-    </script>
-
-
+    <div class="row">
+        <div class="column">          
+           <section>
+            <h2>Arithmetic</h2>
+            <input id="operand1"/> 
+            <label>+</label>
+            <input id="operand2"/>
+            <button onclick="add()">=</button>
+            <label id="sum"></label>  
+        </section>
+        </div>
+        <div class="column">
+            <section>
+                <h2>Prime check</h2>                
+                <label>Number to test:</label>
+                <input id="numberToTest"/>
+                <button onclick="isPrime()">Check</button>
+                <label id="primeCheckResult"></label>  
+            </section>           
+        </div>  
+        <div class="column">
+            <section>
+                <h2>Caeser Cipher</h2>                
+                <label>Text</label>
+                <input id=""/>
+                <button onclick="">Cipher</button>
+                <label id=""></label>  
+            </section>           
+        </div>          
+     </div>
     
+   
+    <script>
+        async function add() {
+            const operand1Input = document.getElementById("operand1");
+            const operand2Input = document.getElementById("operand2");
+            let n = operand1Input.value;
+            let m = operand2Input.value;
+            const response = await fetch("http://arithmetic-sercvice-gtubbs14.onrender.com/add/" + n + "/" + m);
+            const sum = await response.json();
+            document.getElementById("sum").innerText = sum;
+        }
+
+        async function isPrime() {
+            const numberToTest = document.getElementById("numberToTest");            
+            let n = numberToTest.value;            
+            const response = await fetch("???" + n);
+            const result = await response.json();
+            document.getElementById("primeCheckResult").innerText = result;
+        }
+    </script>
 </body>
 </html>
+
+
+
+
+<!-- "http://arithmetic-sercvice-gtubbs14.onrender.com/divide/" -->
