--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <section>
                 <h2>Caeser Cipher</h2>                
                 <label>Text</label>
-                <input id=""/>
-                <button onclick="">Cipher</button>
-                <label id=""></label>  
+                <input id="textToCipher"/>
+                <button onclick="cipher()">Cipher</button>
+                <label id="cipher"></label>  
             </section>           
         </div>          
      </div>
@@ -69,6 +69,14 @@
             const response = await fetch("???" + n);
             const result = await response.json();
             document.getElementById("primeCheckResult").innerText = result;
+        }
+
+        async function cipher(){
+            const numberToTest = document.getElementById("textToCipher");
+            let plainText = numberToTest.value;
+            const response = await fetch("https://ciphers-service-gtubbs14.onrender.com/ciphers/" + plainText);
+            const result = await response.json();
+            document.getElementById("cipher").innerText = result;
         }
     </script>
 </body>
