--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         async function cipher(){
             const numberToTest = document.getElementById("textToCipher");
             let plainText = numberToTest.value;
-            const response = await fetch("https://ciphers-service-gtubbs14.onrender.com/ciphers/" + plainText);
+            const response = await fetch("https://ciphers-service-gtubbs14.onrender.com/ciphers/" + plainText + "/3");
             const result = await response.json();
-            document.getElementById("cipher").innerText = result;
+            document.getElementById("cipher").innerText = result.cipher;
         }
     </script>
 </body>
