--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     </style>
   </head>
   <body>
+    <div class="row" id="login"></div>
+
     <div class="row">
       <div class="column">
         <section>
@@ -50,7 +52,12 @@
       </div>
     </div>
 
+    <script src="configuration.js"></script>
+
     <script>
+      let hosts = configuration.hosts;
+      displayLogin();
+
       async function add() {
         const operand1Input = document.getElementById("operand1");
         const operand2Input = document.getElementById("operand2");
@@ -66,7 +73,12 @@
       async function isPrime() {
         const numberToTest = document.getElementById("numberToTest");
         let n = numberToTest.value;
-        const response = await fetch("???" + n);
+
+        const headers = { Authorization: `Bearer ${configuration.token}` };
+        const response = await fetch(`${hosts.primes_service}/primes/${n}`, {
+          headers,
+        });
+
         const result = await response.json();
         document.getElementById("primeCheckResult").innerText = result;
       }
@@ -74,6 +86,7 @@
       async function cipher() {
         const numberToTest = document.getElementById("textToCipher");
         let plainText = numberToTest.value;
+
         const response = await fetch(
           "https://ciphers-service-gtubbs1414.onrender.com/ciphers/caeser/" +
             plainText +
